--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -322,7 +322,8 @@
 
 .header-container {
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
+    justify-content: flex-start;
     align-items: center;
     height: 80px;
     max-width: 1024px;
